# configtaal

./: .gitignore  .gitmodules  CMakeLists.txt  config.cmake.in
src/: error.hpp  evaluate.cpp  evaluate.hpp  expression.hpp  operator.cpp  operator.hpp  parse.cpp  parse.hpp  precedence.cpp  precedence.hpp  print_error.cpp  print_error.hpp  test.cpp  value.cpp  value.hpp
test/: test
test/evaluate/: CMakeLists.txt  evaluate.cpp  value.cpp
test/expected/: 001-empty  002-identifier  020-and  020-divide  020-dot  020-dot-error  020-funcall  020-greater  020-less  020-modulo  020-or  020-unary-compl  020-unary-not  020-unary-plus  020-xor  021-associativity-plus  021-associativity-power  021-precedence-simple-2  023-funcalls  023-precedence  030-array-literal  031-array-literal-multiline  040-object-literal  041-object-literal-commas  041-object-literal-separators  042-object-literal-expressions  053-string-literal-escape-2  061-integer-literal-hex  100-empty  110-assignment-in-expression  110-associativity-equals  110-associativity-equals-inequals  110-bad-list  110-bad-object-key  110-binary-compl  110-binary-not  110-dot-error  110-incomplete-binary-op  110-incomplete-escape-sequence  110-incomplete-escape-sequence-hex  (+17 more)
test/expected/parse/: 011-comment  020-and  020-bitand  020-bitor  020-colon  020-dot  020-equal  020-funcall  020-greater  020-greater-eq  020-inequal  020-less-eq  020-lshift  020-minus  020-modulo  020-plus  020-power  020-rshift  020-times  020-unary-minus  020-unary-not  020-unary-plus  021-associativity-equals-plus  021-associativity-power  021-precedence-simple  022-parens  023-precedence  031-array-literal-trailing-comma  042-object-literal-expressions  052-string-literal-escape  060-integer-literal  065-double-literal  066-double-literal-3  066-double-literal-4  066-double-literal-5  066-double-literal-6  067-double-literal-hex  110-missing-expression-parens
test/parse/: CMakeLists.txt  parse.cpp  test
test/parse/expected/parse/: 020-colon  020-divide  020-equal  020-greater-eq  020-inequal  020-less  020-lshift  020-or  020-plus  020-power  020-rshift  020-unary-compl  020-unary-minus  020-xor  021-associativity-plus  021-precedence-simple-2  023-funcalls  042-object-literal-expressions  200-mix
test/tests/: 023-precedence  200-mix
test/tests/parse/: 110-missing-expression-parens
